--- a/index.html
+++ b/index.html
@@ -17,28 +17,27 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
       <a href="#" class="navbar-logo">Budi<span>Jaya</span>.</a>
 
-      <!--Kumpulan elemen nav-->
+      <!-- Kumpulan elemen nav -->
       <div class="navbar-nav">
-        <a href="#men">Men</a>
-        <a href="#women">Women</a>
-        <a href="#collection">Collection</a>
-        <a href="#about">Tentang Kami</a>
-        <a href="#kontak">Kontak</a>
+        <a href="#men" class="poppins-regular">Men</a>
+        <a href="#women" class="poppins-regular">Women</a>
+        <a href="#collection" class="poppins-regular">Collection</a>
+        <a href="#about" class="poppins-regular">Tentang Kami</a>
+        <a href="#kontak" class="poppins-regular">Kontak</a>
       </div>
 
       <div class="navbar-extra">
         <a href="#" id="search"><i data-feather="search"></i></a>
         <a href="#" id="shopping-bag"><i data-feather="shopping-bag"></i></a>
-        <!--<a href="#" id="shooping-cart"><i data-feather="shopping-cart"></i></a>-->
         <a href="#" id="login"><i data-feather="log-in"></i></a>
-        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Navbar End -->
@@ -47,5 +46,39 @@
     <script>
       feather.replace();
     </script>
+
+<!--<div id="content"></div>-->
+
+<!-- Footer Start -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="row">
+            <div class="col-md-3 cabang">
+              <h5>Cabang 1</h5>
+              <ul>
+                <li>WA: 085717587800</li>
+                <li>Senin - Minggu, 08.00 - 21.00</li>
+                <li>Perum Griya Kondang Asri, Jalan Citra Kebun Mas T18, Karawang Timur, Kondangjaya, Kec. Karawang Timur. Karawang, Jawa Barat, 41371</li>
+              </ul>
+            </div>
+
+            <div class="col-md-3 cabang">
+              <h5>Cabang 2</h5>
+              <ul>
+                <li>WA: 081288002950</li>
+                <li>Senin - Minggu, 08.00 - 21.00</li>
+                <li>Jl. Perum Citra Kebun Mas No.9-54 Bengle, Kec. Majalaya. Karawang, Jawa Barat, 41371</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        &copy; 2023 Toko Seragam Budi Jaya. All rights reserved.
+      </div>
+    </footer>
+<!-- Footer End -->
+
   </body>
 </html>
