Update Index.html dan Style.css
Menambahkan footer dan mengubah style.css untuk menyesuaikan footer

--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <!-- Navbar Start -->
     <nav class="navbar">
       <a href="#" class="navbar-logo">Budi<span>Jaya</span>.</a>
 
-      <!--Kumpulan elemen nav-->
+      <!-- Kumpulan elemen nav -->
       <div class="navbar-nav">
-        <a href="#men">Men</a>
-        <a href="#women">Women</a>
-        <a href="#collection">Collection</a>
-        <a href="#about">Tentang Kami</a>
-        <a href="#kontak">Kontak</a>
+        <a href="#men" class="poppins-regular">Men</a>
+        <a href="#women" class="poppins-regular">Women</a>
+        <a href="#collection" class="poppins-regular">Collection</a>
+        <a href="#about" class="poppins-regular">Tentang Kami</a>
+        <a href="#kontak" class="poppins-regular">Kontak</a>
       </div>
 
       <div class="navbar-extra">
         <a href="#" id="search"><i data-feather="search"></i></a>
         <a href="#" id="shopping-bag"><i data-feather="shopping-bag"></i></a>
-        <!--<a href="#" id="shooping-cart"><i data-feather="shopping-cart"></i></a>-->
         <a href="#" id="login"><i data-feather="log-in"></i></a>
-        <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
     <!-- Navbar End -->
@@ -47,5 +47,53 @@
     <script>
       feather.replace();
     </script>
+
+<!--<div id="content"></div>-->
+
+<!-- Footer Start -->
+  <footer class="footer">
+  	 <div class="container">
+  	 	<div class="row">
+  	 		<div class="footer-col">
+  	 			<h4>Informasi Toko</h4>
+  	 			<ul>
+  	 				<li><a href="#">Tentang Toko</a></li>
+  	 				<li><a href="#">Visi Misi</a></li>
+  	 				<li><a href="#">Cara Pemesanan</a></li>
+  	 				<li><a href="#">Lokasi Toko</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Bantuan</h4>
+  	 			<ul>
+  	 				<li><a href="#">FAQ</a></li>
+  	 				<li><a href="#">Pengantaran</a></li>
+  	 				<li><a href="#">Pengembalian</a></li>
+  	 				<li><a href="#">Status Pemesanan</a></li>
+  	 				<li><a href="#">Pembayaran</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Pemesanan</h4>
+  	 			<ul>
+  	 				<li><a href="#">Seragam SD</a></li>
+  	 				<li><a href="#">Seragam SMP</a></li>
+  	 				<li><a href="#">Seragam SMA</a></li>
+  	 				<li><a href="#">Aksesoris</a></li>
+  	 			</ul>
+  	 		</div>
+  	 		<div class="footer-col">
+  	 			<h4>Informasi Kontak</h4>
+  	 			<div class="social-links">
+  	 				<a href="#"><i class="fab fa-instagram"></i></a>
+  	 				<a href="#"><i class="fab fa-whatsapp"></i></a>
+  	 				<a href="#"><i class="fa fa-shopping-cart"></i></a>
+  	 			</div>
+  	 		</div>
+  	 	</div>
+  	 </div>
+  </footer>
+<!-- Footer End -->
+
   </body>
 </html>
