--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- My Style -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
 
   <body>
@@ -43,12 +44,7 @@
     </nav>
     <!-- Navbar End -->
 
-    <!-- Feather Icons -->
-    <script>
-      feather.replace();
-    </script>
 
-<!--<div id="content"></div>-->
 
 <!-- Footer Start -->
   <footer class="footer">
@@ -94,6 +90,14 @@
   	 </div>
   </footer>
 <!-- Footer End -->
+
+    <!-- Feather Icons -->
+    <script>
+      feather.replace();
+    </script>
+
+    <!-- Javascript Navbar-->
+    <script src="js/navbarscript.js"></script>
 
   </body>
 </html>
