--- a/e-commerce/sproduct.html
+++ b/e-commerce/sproduct.html
@@ -1,249 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toko Seragam Budi Jaya</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Toko Seragam Budi Jaya</title>
+  
+  <!-- Tambahkan Font Awesome Icon menggunakan CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- Header Section -->
+  <section id="header">
+    <a href="index.html" class="logo"><img src="img/logo_budijaya.png" alt="Logo Budi Jaya" /></a>
+    <div>
+      <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="shop.html">Katalog</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">Tentang Kami</a></li>
+        <li><a href="contact.html">Kontak</a></li>
+        <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        <a href="#" id="close"><i class="far fa-times"></i></a>
+      </ul>
+    </div>
+    <div id="mobile">
+      <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <i id="bar" class="fas fa-outdent"></i>
+    </div>
+  </section>
 
-    <!--Tambahkan Font Awesome Icon menggunakan CDN-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+  <!-- Product Details Section -->
+  <section id="prodetails" class="section-p1">
+    <!-- Produk akan dimasukkan di sini menggunakan JavaScript -->
+  </section>
 
-  <body>
-    <section id="header">
-      <a href="" class="logo"><img src="img/logo_budijaya.png" /></a>
+  <!-- Best Selling Products Section -->
+  <section id="product1" class="section-p1">
+    <h2>Produk Terlaris</h2>
+    <p>Seragam Sekolah</p>
+    <div class="pro-container" id="relatedProducts">
+      <!-- Produk terkait akan dimuat di sini oleh JavaScript -->
 
-      <div>
-        <ul id="navbar">
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="shop.html">Katalog</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="about.html">Tentang Kami</a></li>
-          <li><a href="contact.html">Kontak</a></li>
-          <li id="lg-bag">
-            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-          </li>
-          <a href="#" id="close"><i class="far fa-times"></i></a>
-        </ul>
+      <div class="pro">
+        <img src="img/products/sd.png" alt="" />
+        <div class="des">
+          <span>seragam</span>
+          <h5>Seragam SD</h5>
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h4>IDR 100.000</h4>
+        </div>
+        <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
       </div>
-      <div id="mobile">
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-        <i id="bar" class="fas fa-outdent"></i>
+      <div class="pro">
+        <img src="img/products/smp.jpg" alt="" />
+        <div class="des">
+          <span>seragam</span>
+          <h5>Seragam SMP</h5>
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h4>IDR 100.000</h4>
+        </div>
+        <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
       </div>
-    </section>
+      <div class="pro">
+        <img src="img/products/sma.jpg" alt="" />
+        <div class="des">
+          <span>seragam</span>
+          <h5>Seragam SMA</h5>
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h4>IDR 100.000</h4>
+        </div>
+        <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
+      </div>
+      <div class="pro">
+        <img src="img/products/sma.png" alt="" />
+        <div class="des">
+          <span>atasan</span>
+          <h5>Baju Seragam SMA</h5>
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h4>IDR 100.000</h4>
+        </div>
+        <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
+      </div>
 
-    <section id="prodetails" class="section-p1">
-      <div class="single-pro-image">
-        <img src="img/products/f1.jpg" width="100%" id="MainImg" alt="">
-        
-        <div class="small-img-group">
-          <div class="small-img-col">
-            <img src="img/products/f1.jpg" width="100%" class="small-img" alt="">
-          </div>
-          <div class="small-img-col">
-            <img src="img/products/f2.jpg" width="100%" class="small-img" alt="">
-          </div>
-          <div class="small-img-col">
-            <img src="img/products/f3.jpg" width="100%" class="small-img" alt="">
-          </div>
-          <div class="small-img-col">
-            <img src="img/products/f4.jpg" width="100%" class="small-img" alt="">
-          </div>          
+    </div>
+  </section>
+
+  <!-- Newsletter Section -->
+  <section id="newsletter" class="section-p1 section-m1">
+    <div class="newstext">
+      <h4>Sign Up For Newsletters</h4>
+      <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+    </div>
+    <div class="form">
+      <input type="text" placeholder="Your email address" />
+      <button class="normal">Sign Up</button>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="section-p1">
+    <div class="col">
+      <img class="logo" src="img/logo_budijaya.png" alt="Logo Budi Jaya" />
+      <h4>Contact</h4>
+      <p><strong>Alamat:</strong> Ringroad Selatan, Kabupaten Bantul, Daerah Istimewa Yogyakarta 55191</p>
+      <p><strong>Handphone:</strong> 08123456789</p>
+      <p><strong>Jam Buka:</strong> 08:00 - 16:00</p>
+      <div class="follow">
+        <h4>Follow us</h4>
+        <div class="icon">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-pinterest-p"></i>
+          <i class="fab fa-youtube"></i>
         </div>
       </div>
+    </div>
 
-      <div class="single-pro-details">
-        <h6>Seragam SD</h6>
-        <h4>Seragam Merah Putih</h4>
-        <h2>IDR 100.000</h2>
-        <select>
-          <option>Select Size</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-        </select>
-        <input type="number" name="1">
-        <button class="normal">Add To Cart</button>
-        <h4>Detail Seragam</h4>
-        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+    <div class="col">
+      <h4>About</h4>
+      <a href="#">About us</a>
+      <a href="#">Delivery Information</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms & Condition</a>
+      <a href="#">Contact Us</a>
+    </div>
+
+    <div class="col">
+      <h4>My Account</h4>
+      <a href="#">Sign In</a>
+      <a href="#">View Cart</a>
+      <a href="#">My Wishlist</a>
+      <a href="#">Track My Order</a>
+      <a href="#">Help</a>
+    </div>
+
+    <div class="col install">
+      <h4>Install App</h4>
+      <p>Form App Store or Google Play</p>
+      <div class="row">
+        <img src="img/pay/app.jpg" alt="App Store" />
+        <img src="img/pay/play.jpg" alt="Google Play" />
       </div>
-    </section>
+      <p>Secured Payment Gateways</p>
+      <img src="img/pay/pay.png" alt="Payment Gateways" />
+    </div>
 
-    <section id="product1" class="section-p1">
-      <h2>Produk Terlaris</h2>
-      <p>Seragam Sekolah</p>
-      <div class="pro-container">
-        <div class="pro">
-          <img src="img/products/sd.png" alt="" />
-          <div class="des">
-            <span>seragam</span>
-            <h5>Seragam SD</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>IDR 100.000</h4>
-          </div>
-          <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/smp.jpg" alt="" />
-          <div class="des">
-            <span>seragam</span>
-            <h5>Seragam SMP</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>IDR 100.000</h4>
-          </div>
-          <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/sma.jpg" alt="" />
-          <div class="des">
-            <span>seragam</span>
-            <h5>Seragam SMA</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>IDR 100.000</h4>
-          </div>
-          <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
-        </div>
-        <div class="pro">
-          <img src="img/products/sma.png" alt="" />
-          <div class="des">
-            <span>atasan</span>
-            <h5>Baju Seragam SMA</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>IDR 100.000</h4>
-          </div>
-          <a href="#"><i class="bx bx-shopping-bag cart"></i></a>
-        </div>
-      </div>
-    </section>
+    <div class="copyright">
+      <p>© 2024, Tech2 etc - HTML CSS Ecommerce Template</p>
+    </div>
+  </footer>
 
-    <section id="newsletter" class="section-p1 section-m1">
-      <div class="newstext">
-        <h4>Sign Up For Newsletters</h4>
-        <p>
-          Get E-mail updates about our latest shop and
-          <span>special offers.</span>
-        </p>
-      </div>
-      <div class="form">
-        <input type="text" placeholder="Your email address" />
-        <button class="normal">Sign Up</button>
-      </div>
-    </section>
+  <!-- JavaScript untuk memuat detail produk -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const params = new URLSearchParams(window.location.search);
+      const productId = params.get('id');
 
-    <footer class="section-p1">
-      <div class="col">
-        <img class="logo" src="img/logo_budijaya.png" />
-        <h4>Contact</h4>
-        <p>
-          <strong>Alamat :</strong>
-          Ringroad Selatan, Kabupaten Bantul, Daerah Istimewa Yogyakarta 55191
-        </p>
-        <p><strong>Handphone: </strong>08123456789</p>
-        <p><strong>Jam Buka: </strong>08:00 - 16:00</p>
-        <div class="follow">
-          <h4>Follow us</h4>
-          <div class="icon">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-pinterest-p"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
-        </div>
-      </div>
+      if (productId) {
+        fetch(`fetch_product_detail.php?id=${productId}`)
+          .then(response => response.json())
+          .then(product => {
+            const sizes = product.ukuran.split(',');
+            const prices = product.harga.split(',');
+            const gambar = product.gambar.split(',');
 
-      <div class="col">
-        <h4>About</h4>
-        <a href="#">About us</a>
-        <a href="#">Delivery Information</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms & Condition</a>
-        <a href="#">Contact Us</a>
-      </div>
+            let sizeOptions = '';
+            for (let i = 0; i < sizes.length; i++) {
+              sizeOptions += `<option value="${prices[i]}">${sizes[i]} - IDR ${prices[i]}</option>`;
+            }
 
-      <div class="col">
-        <h4>My Account</h4>
-        <a href="#">Sign In</a>
-        <a href="#">View Cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Track My Order</a>
-        <a href="#">Help</a>
-      </div>
+            const productHTML = `
+              <div class="single-pro-image">
+                <img src="img/products/${gambar[0]}" width="100%" id="MainImg" alt="${product.nama}" />
+                <div class="small-img-group">
+                  ${gambar.map(img => `<div class="small-img-col"><img src="img/products/${img}" width="100%" class="small-img" alt="${product.nama}" /></div>`).join('')}
+                </div>
+              </div>
+              <div class="single-pro-details">
+                <h4>${product.nama}</h4>
+                <h2 class="productPrice">IDR ${prices[0]}</h2>
+                <select class="sizeSelect">
+                  <option>Pilih Ukuran</option>
+                  ${sizeOptions}
+                </select>
+                <input type="number" value="1" />
+                <button class="normal">Add To Cart</button>
+                <h4>Detail Produk</h4>
+                <span>${product.detail_produk}</span>
+              </div>
+            `;
 
-      <div class="col install">
-        <h4>Install App</h4>
-        <p>Form App Store or Google Play</p>
-        <div class="row">
-          <img src="img/pay/app.jpg" />
-          <img src="img/pay/play.jpg" />
-        </div>
-        <p>Secured Payment Gateways</p>
-        <img src="img/pay/pay.png" />
-      </div>
+            const productDetailsSection = document.getElementById('prodetails');
+            productDetailsSection.innerHTML = productHTML;
 
-      <div class="copyright">
-        <p>© 2024, Tech2 etc - HTML CSS Ecommerce Template</p>
-      </div>
-    </footer>
+            const mainImg = document.getElementById('MainImg');
+            const smallImgs = document.getElementsByClassName('small-img');
 
-    <script>
-      var MainImg = document.getElementById("MainImg");
-      var smallimg = document.getElementsByClassName("small-img");
+            for (let i = 0; i < smallImgs.length; i++) {
+              smallImgs[i].onclick = function () {
+                mainImg.src = smallImgs[i].src;
+              };
+            }
 
-      smallimg[0].onclick = function(){
-        MainImg.src = smallimg[0].src;
+            const sizeSelect = document.querySelector('.sizeSelect');
+            sizeSelect.addEventListener('change', function () {
+              const priceElement = document.querySelector('.productPrice');
+              priceElement.textContent = `IDR ${this.value}`;
+            });
+          })
+          .catch(error => console.error('Error:', error));
       }
-      smallimg[1].onclick = function(){
-        MainImg.src = smallimg[1].src;
-      }
-      smallimg[2].onclick = function(){
-        MainImg.src = smallimg[2].src;
-      }
-      smallimg[3].onclick = function(){
-        MainImg.src = smallimg[3].src;
-      }
-    </script>
-
-    <script src="script.js"></script>
-  </body>
+    });
+  </script>
+  
+  <script src="script.js"></script>
+</body>
 </html>
