--- a/e-commerce/shop.html
+++ b/e-commerce/shop.html
@@ -148,8 +148,8 @@
                           <div class="pro" onclick="window.location.href='sproduct.html?id=${product.id}'">
                               <img src="img/products/${gambar[0]}" alt="${product.nama}">
                               <div class="des">
-                                  <span>${product.nama}</span>
-                                  <h5>${product.deskripsi}</h5>
+                                  <span>${product.deskripsi}</span>
+                                  <h5>${product.nama}</h5>
                                   <div class="star">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
