--- a/e-commerce/sproduct.html
+++ b/e-commerce/sproduct.html
@@ -205,6 +205,7 @@
                 </div>
               </div>
               <div class="single-pro-details">
+                <h6>${product.deskripsi}</h6>
                 <h4>${product.nama}</h4>
                 <h2 class="productPrice">IDR ${prices[0]}</h2>
                 <select class="sizeSelect">
